fix spacing of button

--- a/wp-content/themes/wptheme-lfb-0.2/src/styles/features/_items.scss
+++ b/wp-content/themes/wptheme-lfb-0.2/src/styles/features/_items.scss
@@ -110,7 +110,8 @@ a.item:hover {
 }
 
 .item__button {
-  margin-left: 5px;
+  margin-top: $d-base;
+  margin-left: $d-half;
 }
 
 .heading--bordered {
